server.tests: Replace ImmutableList.of with java.util.List.of
Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>